--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -131,21 +131,13 @@ html.sk-ios-device {
 
         #sk-footer {
             .sk-footer-content {
-                width: 100%;
                 border-bottom: 1px solid rgba(0,0,0,0.15);
             }
-            form {
-                width: 100%;
-                margin-left: -@input-horizontal-margin;
-                margin-right: -@input-horizontal-margin;
-                padding-left: @input-horizontal-margin;
-                padding-right: @input-horizontal-margin;
-            }
-            .input-container {
-                padding-right: 0 !important;
-            }
+
             .send {
-                display: none;
+                &:hover {
+                    color: #b2b2b2;
+                }
             }
         }
     }
